# 26_HP043

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_SPEC.md  DB_SCHEMA.md  Dockerfile  PRD.md  README.md  TECH_SPEC.md  TEST_PLAN.md  ULFLOW.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_pg_trgm.py  002_fuel_type.py  003_vessel.py  004_regulation_year.py  005_voyage.py  006_voyage_fuel_use.py  007_voyage_scenario.py  008_calculation_run.py  009_simulation_snapshot.py  010_cii_reference_line.py  011_cii_rating_boundary.py  012_weather_model_parameter.py  013_weather_snapshot.py  014_annual_simulation_run.py  015_audit_log.py
scripts/: dev.sh
src/cii_platform/: config.py  errors.py
src/cii_platform/api/: __init__.py  error_handlers.py  field_labels.py  main.py  middleware.py  serialization.py  timefmt.py
src/cii_platform/api/routes/: __init__.py  health.py
src/cii_platform/api/schemas/: __init__.py
src/cii_platform/calc/: __init__.py
src/cii_platform/db/: __init__.py
src/cii_platform/db/models/: __init__.py  annual_simulation_run.py  audit_log.py  base.py  calculation_run.py  cii_rating_boundary.py  fuel_type.py  (+9 more)
src/cii_platform/services/: __init__.py
tests/: conftest.py  test_calculation_migrations.py  test_config.py  test_error_handlers.py  test_field_labels.py  test_health.py  test_orm_schema_sync.py  test_parameter_migrations.py  test_request_context.py  test_serialization.py  test_voyage_migrations.py  test_weather_simulation_migrations.py  test_zz_roundtrip.py
(+1 files in other folders)
